fix colors in light and dark mode (#1714)

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -184,8 +184,8 @@ html {
     box-sizing: inherit;
 }
 body {
+    color: hsla(0, 0%, 0%, 0.8);
     background: #200935;
-    color: #fff;
     font-family: 'DM Sans', '-apple-system', 'BlinkMacSystemFont', 'avenir next', 'avenir', 'segoe ui', 'helvetica neue',
         'helvetica', 'Ubuntu', 'roboto', 'noto', 'arial', 'sans-serif';
     font-kerning: normal;
